# loom

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  mutmut.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.githooks/: install-hooks.sh  pre-commit  pre-push
.github/workflows/: test.yml
data/: README.md
docs/: architecture.md  comment-style.md  contributing.md  instructions.md  latex-templates-design.md  testing-infrastructure.md  testing.md  themes.md
loom.egg-info/: PKG-INFO
src/: __init__.py  cli.py  cli_args.py  document.py  main.py  main_cli.py  openai_client.py  pipeline.py  prompts.py  settings.py
src/ai/: __init__.py  cache.py  models.py  prompts.py  provider_validator.py  response_cache.py  test_prompts.py  testing_support.py  types.py  utils.py
src/cli/: __init__.py  app.py  args.py  art.py  banner.txt  bulk_runner.py  commands.py  decorators.py  helpers.py  logic.py  model_helpers.py  output_manager.py  params.py  runner.py  typer_styles.py  validation_handlers.py  watch.py
src/config/: __init__.py  dev_mode.py  env_validator.py  settings.py
src/core/: __init__.py  ats_analyzer.py  bulk_types.py  comparison_matrix.py  constants.py  debug.py  edit_helpers.py  exceptions.py  output.py  pipeline.py  types.py  validation.py  verbose.py
src/loom_io/: __init__.py  base_handler.py  bulk_io.py  console.py  documents.py  generics.py  latex_handler.py  latex_patterns.py  shared_patterns.py  template_io.py  types.py  typst_handler.py  typst_patterns.py  ui.py
src/ui/: __init__.py  ascii_art.py  banner.txt  colors.py  console_theme.py  pausable_timer.py  progress.py  reporting.py  theme_selector.py  typer_styles.py  ui.py
templates/: README.md  resume.tex
templates/swe-latex/: README.md  loom-template.toml
templates/swe-typst/: README.md  (+1 more)
tests/: __init__.py  conftest.py
(+177 files in other folders)
