[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom"
version = "1.2.0"
description = "Tailor resumes using the OpenAI Responses API"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "python-docx",
    "openai",
    "anthropic",
    "ollama",
    "python-dotenv",
    "rich",
    "simple-term-menu",
    "readchar",
]

[project.scripts]
loom = "src.main:app"